# WalkingPython

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/: main.py
tests/: conftest.py
tests/unit_tests/: test.py
