[tool.poetry]
name = "walkingpython"
version = "0.1.0"
description = ""
authors = ["AspirantDrago <sanekclubstr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
flake8 = "^7.2.0"
pyinstaller = "^6.14.1"
pytest = "^8.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
